--- a/index.css
+++ b/index.css
@@ -5,11 +5,16 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-image: url(images/test-background-Pattern-01.png);
+    background-repeat: no-repeat;
+
 }
 
-#choices{
-
+input{
+    cursor: pointer;
+    margin: 5px;
 }
+
 
 button{
     padding: 5px;
@@ -18,6 +23,10 @@ button{
     color: black;
     cursor: pointer;
     margin-top: 10px;
+}
+
+#next{
+    width: 100px;
 }
 
 button:hover,
